--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -6,7 +6,7 @@ accion.nuevo=Nuevo
 accion.recordar=Recordar
 accion.registrar=Registrar
 accion.regresar=Regresar
-aplicacion.titulo=Cleta
+aplicacion.titulo=VideojuegosCookie
 carrito.cantidad=Cantidad
 carrito.datos=Datos del Producto
 carrito.facturar=Facturar
